--- a/index.html
+++ b/index.html
@@ -17,19 +17,24 @@
     <title>Todo List</title>
   </head>
   <body>
-
-<header>
-    <h1>Mo's Todo List</h1>
-</header>
-<form>
-    <input type="text" class="todo-input">
-    <button class="todo-button" type="submit">
+    <header>
+      <h1>Mo's Todo List</h1>
+    </header>
+    <form>
+      <input type="text" class="todo-input" />
+      <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"> </i>
-    </button>
-</form>
-<div class="todo-container">
-    <ul class="todo-list"></ul>
-</div>
+      </button>
+    </form>
+    <div class="todo-container">
+      <ul class="todo-list">
+        <div class="todo">
+          <li></li>
+          <button>delete</button>
+          <button>checked</button>
+        </div>
+      </ul>
+    </div>
 
     <script src="./app.js"></script>
   </body>
