--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
       <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"> </i>
       </button>
+      <div class="select">
+        <select name="todos" class="filter-todo">
+          <option value="all">all</option>
+          <option value="completed">completed</option>
+          <option value="uncompleted">uncompleted</option>
+        </select>
+      </div>
     </form>
     <div class="todo-container">
-      <ul class="todo-list">
-        <div class="todo">
-          <li></li>
-          <button>delete</button>
-          <button>checked</button>
-        </div>
-      </ul>
+      <ul class="todo-list"></ul>
     </div>
+
 
     <script src="./app.js"></script>
   </body>
