--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <h1>Mo's Todo List</h1>
+      <h1>Mo's Todo App</h1>
     </header>
     <form>
       <input type="text" class="todo-input" />
